# ArtificialCraft

./: .gitignore  README.md  pyproject.toml
src/artificialcraft/: train.py
